--- a/build.xml
+++ b/build.xml
@@ -1,65 +1,63 @@
 <project name="qwe3-1" default="datanucleusenhance">
-    <property name="sdk.dir" location="/usr/local/appengine" />
+	<property name="scala.home" value="/usr/local/scala"/>
+	<property name="sdk.home" value="/usr/local/appengine"/>
+	<import file="${sdk.home}/config/user/ant-macros.xml" />
 
-    <!-- define where do we have scala -->
-    <property name="scala.dir" location="/usr/local/scala" />
+	<path id="scala.classpath">
+		<fileset dir="${scala.home}/lib" includes="scala-*.jar"/>
+	</path>
+	<path id="appengine.classpath">
+		<fileset dir="${sdk.home}/lib" includes="shared/**/*.jar"/>
+	</path>
+	<path id="war.classpath">
+		<fileset dir="war/WEB-INF/lib" includes="**/*.jar"/>
+	</path>
+	<path id="build.classpath">
+		<fileset dir="war/WEB-INF/classes" includes="**/*.class"/>
+	</path>
+	<path id="project.classpath">
+	        <path refid="scala.classpath" />
+	        <path refid="appengine.classpath" />
+	        <path refid="war.classpath" />
+	        <path refid="build.classpath" />
+	</path>
+	<taskdef resource="scala/tools/ant/antlib.xml">
+      		<classpath>
+			<path refid="scala.classpath"/>
+      		</classpath>
+    	</taskdef>
 
-    <import file="${sdk.dir}/config/user/ant-macros.xml" />
+	<target name="clean" description="Cleans WAR gen info, libraries and classes.">
+		<delete dir="war/WEB-INF/lib"/>
+		<delete dir="war/WEB-INF/classes/com"/>
+		<delete dir="war/WEB-INF/appengine-generated"/>
+		<delete dir="tmpClasses"/>
+	</target>
 
-    <path id="project.classpath">
-        <pathelement path="war/WEB-INF/classes" />
-        <fileset dir="war/WEB-INF/lib">
-            <include name="**/*.jar" />
-        </fileset>
-        <fileset dir="${sdk.dir}/lib">
-            <include name="shared/**/*.jar" />
-        </fileset>
-    </path>
-
-    <!-- explain how to work with scala -->
-    <target name="init">
-        <path id="build.classpath">
-            <pathelement location="${scala.dir}/lib/scala-compiler.jar" />
-            <pathelement location="${scala.dir}/lib/scala-library.jar" />
-        </path>
-        <taskdef resource="scala/tools/ant/antlib.xml">
-            <classpath>
-                <pathelement location="${scala.dir}/lib/scala-compiler.jar"   />
-                <pathelement location="${scala.dir}/lib/scala-library.jar"   />
-            </classpath>
-        </taskdef>
-    </target>
-
-    <target name="copyjars"
-            description="Copies the App Engine JARs to the WAR.">
+    <target name="copyjars" description="Copies the App Engine JARs to the WAR.">
         <mkdir dir="war/WEB-INF/lib" />
         <copy todir="war/WEB-INF/lib" flatten="true">
-            <fileset dir="${sdk.dir}/lib/user">
-                <include name="**/*.jar" />
-            </fileset>
-            <!-- include scala -->
-            <fileset dir="${scala.dir}/lib">
-                <include name="**/scala-library.jar" />
-            </fileset>
+            <fileset dir="${sdk.home}/lib/user" includes="**/*.jar"/>
+            <fileset dir="${scala.home}/lib" includes="**/*-library.jar"/>
         </copy>
     </target>
 
-    <target name="compile" depends="init,copyjars"
-            description="Compiles Java source and copies other source files to the WAR.">
+    <target name="build" depends="compile"/>
+
+    <target name="compile" depends="copyjars" description="Compiles Java source and copies other source files to the WAR.">
         <mkdir dir="war/WEB-INF/classes" />
         <copy todir="war/WEB-INF/classes">
-            <fileset dir="src">
-                <exclude name="**/*.java" />
-                <exclude name="**/*.scala" />
-            </fileset>
+            <fileset dir="src/java" excludes="**/*.java"/>
+            <fileset dir="src/scala" excludes="**/*.scala"/>
         </copy>
-        <scalac srcdir="src"
-                destdir="war/WEB-INF/classes"
-                classpathref="project.classpath" />
-        <javac srcdir="src"
+        <!--javac srcdir="src/java"
                destdir="war/WEB-INF/classes"
                classpathref="project.classpath"
-               debug="on" />
+               debug="on" /-->
+        <scalac srcdir="src/scala"
+                destdir="war/WEB-INF/classes"
+                classpathref="project.classpath" 
+		/>
     </target>
 
     <target name="datanucleusenhance" depends="compile"
