--- a/build.xml
+++ b/build.xml
@@ -1,38 +1,39 @@
+
 <project name="qwe3-1" default="datanucleusenhance">
-	<property name="scala.home" value="/usr/local/scala"/>
-	<property name="sdk.home" value="/usr/local/appengine"/>
-	<import file="${sdk.home}/config/user/ant-macros.xml" />
+    <property name="scala.home" value="/usr/local/scala"/>
+    <property name="sdk.home" value="/usr/local/appengine"/>
+    <import file="${sdk.home}/config/user/ant-macros.xml" />
 
-	<path id="scala.classpath">
-		<fileset dir="${scala.home}/lib" includes="scala-*.jar"/>
-	</path>
-	<path id="appengine.classpath">
-		<fileset dir="${sdk.home}/lib" includes="shared/**/*.jar"/>
-	</path>
-	<path id="war.classpath">
-		<fileset dir="war/WEB-INF/lib" includes="**/*.jar"/>
-	</path>
-	<path id="build.classpath">
-		<fileset dir="war/WEB-INF/classes" includes="**/*.class"/>
-	</path>
-	<path id="project.classpath">
-	        <path refid="scala.classpath" />
-	        <path refid="appengine.classpath" />
-	        <path refid="war.classpath" />
-	        <path refid="build.classpath" />
-	</path>
-	<taskdef resource="scala/tools/ant/antlib.xml">
-      		<classpath>
-			<path refid="scala.classpath"/>
-      		</classpath>
-    	</taskdef>
+    <path id="scala.classpath">
+        <fileset dir="${scala.home}/lib" includes="scala-*.jar"/>
+    </path>
+    <path id="appengine.classpath">
+        <fileset dir="${sdk.home}/lib" includes="shared/**/*.jar"/>
+    </path>
+    <path id="war.classpath">
+        <fileset dir="war/WEB-INF/lib" includes="**/*.jar"/>
+    </path>
+    <path id="build.classpath">
+        <fileset dir="war/WEB-INF/classes" includes="**/*.class"/>
+    </path>
+    <path id="project.classpath">
+        <path refid="scala.classpath" />
+        <path refid="appengine.classpath" />
+        <path refid="war.classpath" />
+        <path refid="build.classpath" />
+    </path>
+    <taskdef resource="scala/tools/ant/antlib.xml">
+        <classpath>
+            <path refid="scala.classpath"/>
+        </classpath>
+    </taskdef>
 
-	<target name="clean" description="Cleans WAR gen info, libraries and classes.">
-		<delete dir="war/WEB-INF/lib"/>
-		<delete dir="war/WEB-INF/classes/com"/>
-		<delete dir="war/WEB-INF/appengine-generated"/>
-		<delete dir="tmpClasses"/>
-	</target>
+    <target name="clean" description="Cleans WAR gen info, libraries and classes.">
+        <delete dir="war/WEB-INF/lib"/>
+        <delete dir="war/WEB-INF/classes/com"/>
+        <delete dir="war/WEB-INF/appengine-generated"/>
+        <delete dir="tmpClasses"/>
+    </target>
 
     <target name="copyjars" description="Copies the App Engine JARs to the WAR.">
         <mkdir dir="war/WEB-INF/lib" />
@@ -47,14 +48,16 @@
     <target name="compile" depends="copyjars" description="Compiles Java source and copies other source files to the WAR.">
         <mkdir dir="war/WEB-INF/classes" />
         <copy todir="war/WEB-INF/classes">
-            <fileset dir="src/java" excludes="**/*.java"/>
-            <fileset dir="src/scala" excludes="**/*.scala"/>
+            <fileset dir="src">
+                <exclude name="**/*.java"/>
+                <exclude name="**/*.scala"/>
+            </fileset>
         </copy>
-        <!--javac srcdir="src/java"
+        <javac srcdir="src"
                destdir="war/WEB-INF/classes"
                classpathref="project.classpath"
-               debug="on" /-->
-        <scalac srcdir="src/scala"
+               debug="on" />
+        <scalac srcdir="src"
                 destdir="war/WEB-INF/classes"
                 classpathref="project.classpath" 
 		/>
